fixed bug where image would repeat on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -19,13 +19,15 @@
   padding-top: 15px;
   padding-bottom: 15px;
   color: #18c25f;
-  opacity: 0.9;
+  opacity: 0.97;
 }
 
 body {
+  height: 100%;
   font-family: 'Roboto', sans-serif;
   background-size: cover;
   background-image: url(/src/assets/background.jpg);
+  background-attachment: fixed;
   background-color: #2D2B3A;
   -webkit-background-size: cover;
   -moz-background-size: cover;
